--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <a href="home.html">Home</a>
     <a href="index.html">Menu</a>
   </nav>
-    <h1>Two Sandals Soups and Salad</h1>
+    <h1><em>Two Sandals Soups and Salad</em></h1>
     <h2>Menu</h2>
     <ul>
       <li><a href="#Soups">Soups</a></li>
